--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Keras-Preprocessing==1.1.2
 matplotlib==3.5.1
 matplotlib-inline==0.1.3
 numpy==1.22.2
+libgl1-mesa-glx
 opencv-python==4.5.5.62
 pandas==1.4.1
 Pillow==9.0.1
